# Cloudfin

./: .gitignore  Cargo.toml  README.md  SPEC-Design.md  SPEC-Impl-Core.md  SPEC-Impl.md  SPEC-Tech-Core.md  SPEC-Tech-Modules.md  SPEC-Tech-UI.md  SPEC.md
.github/workflows/: build-flatpak.yml  build-linux-ui.yml  ci.yml  cross-compile.yml  release.yml
Drafts/: MOD-crdt.md  MOD-crypto.md  MOD-i2p.md  MOD-p2p.md  MOD-tor.md  SPEC-Core-API.md  SPEC-Core-Interaction.md  SPEC-Core.md  SPEC-Install-Flow.md  SPEC-Plugin-Interface.md  SPEC-Review.md  SPEC-UI-Android.md  SPEC-UI-Common.md  SPEC-UI-Desktop.md  SPEC-UI-iOS.md  SPEC.md
cli/: Cargo.toml
cli/src/: main.rs
cloudfin-android-service/: local.properties  settings.gradle.kts
cloudfin-android-service/app/: build.gradle.kts
cloudfin-android-service/app/src/main/: AndroidManifest.xml
cloudfin-android-service/app/src/main/java/com/cloudfin/core/: BootReceiver.java  CoreService.java  MainActivity.java
cloudfin-android-service/app/src/main/res/drawable/: ic_notification.xml
cloudfin-android-service/app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml
cloudfin-android-service/app/src/main/res/values/: colors.xml  themes.xml
cloudfin-core/: Cargo.toml
cloudfin-core/cli/src/: main.rs
cloudfin-core/core/: Cargo.toml
cloudfin-core/core/src/: lib.rs  main.rs  module.rs
cloudfin-core/core/src/api/: mod.rs
cloudfin-core/core/src/config/: mod.rs
cloudfin-core/core/src/plugins/: manager.rs  mod.rs
cloudfin-core/docs/: Core-API.md  SPEC-UI.md
cloudfin-core/plugins/common/: Cargo.toml
cloudfin-core/plugins/common/src/: module.rs
cloudfin-core/plugins/p2p/: Cargo.toml  README.md
cloudfin-core/plugins/p2p/src/: network.rs
cloudfin-mod/: Cargo.toml
cloudfin-mod/crdt/: Cargo.toml  README.md
cloudfin-mod/crdt/src/: document.rs  lib.rs  state.rs  sync.rs
cloudfin-mod/p2p/: Cargo.toml
cloudfin-mod/p2p/src/: behaviour.rs  discovery.rs  lib.rs
cloudfin-ui/Mobile/android/CloudfinApp/app/: build.gradle.kts
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/: AndroidManifest.xml
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/: MainActivity.kt  MainViewModel.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/data/api/: CloudfinApi.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/data/repository/: CloudfinRepository.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/model/: Models.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/ui/components/: CardColors.kt  ModuleCard.kt  SolidCard.kt  TCard.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/ui/navigation/: BottomNavBar.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/ui/screens/: ModulesScreen.kt  NetworkScreen.kt  SettingsScreen.kt  StatusScreen.kt  SyncScreen.kt
cloudfin-ui/Mobile/android/CloudfinApp/app/src/main/java/com/cloudfin/ui/theme/: Color.kt  Theme.kt  WallpaperBackground.kt
cloudfin-ui/android/CloudfinApp/: README.md  settings.gradle.kts
cloudfin-ui/android/CloudfinApp/app/src/main/java/com/cloudfin/: MainActivity.kt
cloudfin-ui/android/CloudfinApp/app/src/main/java/com/cloudfin/data/api/: CloudfinApi.kt
cloudfin-ui/android/CloudfinApp/app/src/main/java/com/cloudfin/data/repository/: CloudfinRepository.kt
cloudfin-ui/android/CloudfinApp/app/src/main/java/com/cloudfin/model/: Models.kt
cloudfin-ui/android/CloudfinApp/app/src/main/java/com/cloudfin/ui/screens/: ModulesScreen.kt  NetworkScreen.kt  SettingsScreen.kt  StatusScreen.kt  SyncScreen.kt
cloudfin-ui/android/CloudfinApp/app/src/main/java/com/cloudfin/ui/theme/: Theme.kt
cloudfin-ui/android/CloudfinApp/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cloudfin-ui/docs/: SPEC-UI-Desktop.md  SPEC-UI-Mobile.md
cloudfin-ui/linux-desktop/: index.html  package-lock.json  package.json
cloudfin-ui/linux-desktop/flathub/: io.flathub.Cloudfin.desktop  io.flathub.Cloudfin.yaml
cloudfin-ui/linux-desktop/flatpak/: com.cloudfin.UI.desktop  com.cloudfin.UI.yaml
cloudfin-ui/linux-desktop/src/: App.css  App.tsx
cloudfin-ui/linux-desktop/src-tauri/: Cargo.toml  tauri.conf.json
cloudfin-ui/linux-desktop/src-tauri/icons/: icon.icns
cloudfin-ui/linux-desktop/src-tauri/src/: lib.rs  main.rs
cloudfin-ui/linux-desktop/src-tauri/src/commands/: install.rs
cloudfin-ui/linux-desktop/src/api/: core.ts  install.ts
cloudfin-ui/linux-desktop/src/components/: InstallGuide.tsx
cloudfin-ui/linux-desktop/src/contexts/: GuideContext.tsx  ThemeContext.tsx
cloudfin-ui/linux-desktop/src/pages/: Modules.tsx  Network.tsx  Settings.tsx  Status.tsx  Sync.tsx
core/src/: lib.rs
core/src/api/: config.rs  core.rs  modules.rs
core/src/config/: manager.rs
core/src/logging/: mod.rs
core/src/plugins/: manager.rs  mod.rs
docs/: SPEC-Core.md  Taichi-Plan.md
plugins/common/src/: lib.rs  manifest.rs
