[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "plugins/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cloudfin Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
libloading = "0.8"
thiserror = "1"
anyhow = "1"
