[package]
name = "cloudfin-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
libloading.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"
