[package]
name = "cloudfin-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "tracing"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
libloading = "0.8"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
tower-http = { version = "0.6", features = ["trace"] }

[build-dependencies]
