[package]
name = "cloudfin-crdt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cloudfin-plugin-common = { path = "../common" }

# CRDT
yrs = "0.22"
uuid = { version = "1", features = ["v4"] }
bytes = "1"

# persistence
tokio-util = { version = "0.7", features = ["codec"] }
