[package]
name = "cloudfin-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# libp2p (identify/ping are re-exported from main crate)
libp2p = { version = "0.54", features = ["tcp", "yamux", "noise", "mdns", "kad", "identify", "ping", "tokio", "macros"] }
futures = "0.3"

# Logging
tracing = { workspace = true }
