[package]
name = "cloudfin-ui"
version = "0.1.0"
description = "Cloudfin Desktop UI"
authors = ["Cloudfin Team"]
edition = "2021"

[workspace]

[lib]
name = "cloudfin_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
